--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.5.1",
     "daisyui": "^3.9.3",
     "react": "^18.2.0",
+    "react-daisyui": "^4.1.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-lazyload": "^3.2.0",
+    "react-paginate": "^8.2.0",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
