--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-daisyui": "^4.1.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
-    "react-lazyload": "^3.2.0",
+    "react-lazy-load": "^4.0.1",
+    "react-lazy-load-image-component": "^1.6.0",
     "react-paginate": "^8.2.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
